<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MostrarDatos">

    <TextView
        android:id="@+id/tvTituloConfir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Confirmar"
        android:textSize="@dimen/tamaño_titulo"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:textSize="@dimen/tamaño_text"
        android:layout_marginTop="@dimen/separador"/>

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fecha"
        android:textSize="@dimen/tamaño_text"
        android:layout_marginTop="@dimen/separador"/>
    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        android:textSize="@dimen/tamaño_text"
        android:layout_marginTop="@dimen/separador"/>
    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:textSize="@dimen/tamaño_text"
        android:layout_marginTop="@dimen/separador"/>

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descrip"
        android:textSize="@dimen/tamaño_text"
        android:layout_marginTop="@dimen/separador"/>

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editar"
        android:layout_marginTop="@dimen/boton_separador"
        android:layout_gravity="center"/>


</LinearLayout>